# news_aggregator_telegram

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
src/main/agregator/: get_info.py
