[tool.poetry]
name = "news-aggregator-telegram"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <nodegopher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
